--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
-  "engines": {
-    "node": ">=14.x"
-  },
   "license": "MIT",
+  
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,5 +20,9 @@
   },
   "devDependencies": {
     "prisma": "^5.18.0"
-  }
+  },
+  "engines": {
+  "node": "20.x"
+}
+
 }
