atualização package.json

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "main": "index.js",
   "license": "MIT",
-  
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,10 +20,10 @@
     "mongodb": "^6.8.0"
   },
   "devDependencies": {
-    "prisma": "^5.18.0"
+    "prisma": "^5.18.0",
+    "nodemon": "^2.0.20"
   },
   "engines": {
-  "node": "20.x"
-}
-
+    "node": "20.x"
+  }
 }
